database/staple_db_service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: staple
  name: staple-db-service
spec:
  ports:
  - port: 5432
  selector:
    app: staple-db
  clusterIP: None
