database/staple_db_network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: staple-db-network-policy
  namespace: staple
spec:
  podSelector:
    matchLabels:
      app: staple-db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: staple
    ports:
    - protocol: TCP
      port: 5432
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: staple
    ports:
    - protocol: TCP
      port: 5432
